--- a/portfolio.html
+++ b/portfolio.html
@@ -14,114 +14,120 @@
     <body>
 <!-- Шапка сайта -->
     <header class="page-header">
-        <a href="" lang="en" class="logo">Web<span class="black">Studio</span></a>
-            <ul class="site-nav list">
-                    <li><a href="./index.html" class="link">Студия</a></li>
-                    <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                    <li><a href="" class="link">Контакты</a></li>
-            </ul>
-        <nav>
-            <ul class="contact list">
-                    <li><a href="mailto:info@devstudio.com" lang="en" class="link">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-            </ul>
-        </nav>
-        </header>
+        <div class="conteiner">
+            <a href="" lang="en" class="logo">Web<span class="black">Studio</span></a>
+                <ul class="site-nav list">
+                        <li class="item"><a href="./index.html" class="link">Студия</a></li>
+                        <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                        <li class="item"><a href="" class="link">Контакты</a></li>
+                </ul>
+            <nav>
+                <ul class="contact list">
+                        <li class="item"><a href="mailto:info@devstudio.com" lang="en" class="link">info@devstudio.com</a></li>
+                        <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <main>
         <!--Портфолио-->
-    <section class="section portfolio">
-        <h1 class="move-title">Наше портфолио</h1>
-      <ul class="list portfolio-nav">
-          <li><button type="button" class="button button-portfolio">Все</button></li>
-          <li><button type="button" class="button button-portfolio">Веб-сайты</button></li>
-          <li><button type="button" class="button button-portfolio">Приложения</button></li>
-          <li><button type="button" class="button button-portfolio">Дизайн</button></li>
-          <li><button type="button" class="button button-portfolio">Маркетинг</button></li>
-      </ul>
-      <ul class="list content-list">
-          <li>
-              <a href="" class="link">
-                  <img src="./images/portfolio/img-1.jpg" alt="ноутбук с веб-страницей" 
-                  width="370" height="294">
-                  <h3>Технокряк</h3>
-                  <p>Веб-сайт</p>
-              </a>
-          </li>
-        <li>
-            <a href="" class="link">
-                <img src="./images/portfolio/img-2.jpg" alt="баскетболисты" 
-                width="370" height="294">
-                <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-                <p>Дизайн</p>
-            </a>
-        </li>
-        <li>
-            <a href="" class="link">
-                <img src="./images/portfolio/img-3.jpg" alt="логотип ресторана" 
-                width="370" height="294">
-                <h3>Ресторан <span lang="en">Seafood</span></h3>
-                <p>Приложение</p>
-            </a>
-        </li>
-        <li>
-            <a href="" class="link">
-                <img src="./images/portfolio/img-4.jpg" alt="наушники" 
-                width="370" height="294">
-                <h3>Проект <span lang="en">Prime</span></h3>
-                <p>Маркетинг</p>
-            </a>
-        </li>
-        <li>
-            <a href="" class="link">
-                <img src="./images/portfolio/img-5.jpg" alt="две коробки" 
-                width="370" height="294">
-                <h3>Проект <span lang="en">Boxes</span></h3>
-                <p>Приложение</p>
-            </a>
-        </li>
-        <li>
-            <a href="" class="link">
-                <img src="./images/portfolio/img-6.jpg" alt="монитор" 
-                width="370" height="294">
-                <h3><span lang="en">Inspiration has no Borders</span></h3>
-                <p>Веб-сайт</p>
-            </a>
-        </li>
-        <li>
-            <a href="" class="link">
-                <img src="./images/portfolio/img-7.jpg" alt="развернутая книга" 
-                width="370" height="294">
-                <h3>Издание <span lang="en">Limited Edition</span></h3>
-                <p>Дизайн</p>
-            </a>
-        </li>
-        <li>
-            <a href="" class="link">
-                <img src="./images/portfolio/img-8.jpg" alt="лейбл" 
-                width="370" height="294">
-                <h3>Проект <span lang="en">LAB</span></h3>
-                <p>Маркетинг</p>
-            </a>
-        </li>
-        <li>
-            <a href="" class="link">
-                <img src="./images/portfolio/img-9.jpg" alt="человек печатает на ноутбуке" width="370" height="294">
-                <h3><span lang="en">Growing Business</span></h3>
-                <p>Приложение</p>
-            </a>
-        </li>
-      </ul>
-    </section>
+        <section class="section portfolio">
+            <div class="conteiner">
+                <h1 class="move-title">Наше портфолио</h1>
+                <ul class="list portfolio-nav">
+                    <li><button type="button" class="button button-portfolio">Все</button></li>
+                    <li><button type="button" class="button button-portfolio">Веб-сайты</button></li>
+                    <li><button type="button" class="button button-portfolio">Приложения</button></li>
+                    <li><button type="button" class="button button-portfolio">Дизайн</button></li>
+                    <li><button type="button" class="button button-portfolio">Маркетинг</button></li>
+                </ul>
+                <ul class="list content-list">
+                    <li class="item">
+                        <a href="" class="link">
+                            <img src="./images/portfolio/img-1.jpg" alt="ноутбук с веб-страницей" 
+                            width="370" height="294">
+                            <h3>Технокряк</h3>
+                            <p>Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <img src="./images/portfolio/img-2.jpg" alt="баскетболисты" 
+                            width="370" height="294">
+                            <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                            <p>Дизайн</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <img src="./images/portfolio/img-3.jpg" alt="логотип ресторана" 
+                            width="370" height="294">
+                            <h3>Ресторан <span lang="en">Seafood</span></h3>
+                            <p>Приложение</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <img src="./images/portfolio/img-4.jpg" alt="наушники" 
+                            width="370" height="294">
+                            <h3>Проект <span lang="en">Prime</span></h3>
+                            <p>Маркетинг</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <img src="./images/portfolio/img-5.jpg" alt="две коробки" 
+                            width="370" height="294">
+                            <h3>Проект <span lang="en">Boxes</span></h3>
+                            <p>Приложение</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <img src="./images/portfolio/img-6.jpg" alt="монитор" 
+                            width="370" height="294">
+                            <h3><span lang="en">Inspiration has no Borders</span></h3>
+                            <p>Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <img src="./images/portfolio/img-7.jpg" alt="развернутая книга" 
+                            width="370" height="294">
+                            <h3>Издание <span lang="en">Limited Edition</span></h3>
+                            <p>Дизайн</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <img src="./images/portfolio/img-8.jpg" alt="лейбл" 
+                            width="370" height="294">
+                            <h3>Проект <span lang="en">LAB</span></h3>
+                            <p>Маркетинг</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <img src="./images/portfolio/img-9.jpg" alt="человек печатает на ноутбуке" width="370" height="294">
+                            <h3><span lang="en">Growing Business</span></h3>
+                            <p>Приложение</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <!--Футер-->
     <footer class="footer">
-        <a href="" lang="en" class="logo">Web<span class="white">Studio</span></a>
-        <address class="footer-adress">
-        <ul class="list">
-            <li><a href="" class="map"> г. Киев, пр-т Леси Украинки, 26 </a></li>
-            <li><a href="mailto:info@example.com" lang="en" class="nav">info@example.com</a></li>
-            <li><a href="tel:+380961111111" class="nav">+38 096 111 11 11</a></li>
-        </ul>
-        </address>
+        <div class="conteiner">
+            <a href="" lang="en" class="logo">Web<span class="white">Studio</span></a>
+            <address class="footer-adress">
+            <ul class="list footer-list">
+                <li class="item"><a href="" class="map"> г. Киев, пр-т Леси Украинки, 26 </a></li>
+                <li class="item"><a href="mailto:info@example.com" lang="en" class="nav">info@example.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="nav">+38 096 111 11 11</a></li>
+            </ul>
+            </address>
+        </div>
     </footer>
 </html>
