--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
     <body>
 <!-- Шапка сайта -->
         <header class="page-header">
-            <div class="conteiner">
-            <a href="" lang="en" class="logo">Web<span class="black">Studio</span></a>
+            <div class="container header-nav">
+                <a href="" lang="en" class="header-logo">Web<span class="black">Studio</span></a>
                 <ul class="site-nav list">
-                        <li class="item"><a href="./index.html" class="link">Студия</a></li>
-                        <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
-                        <li class="item"><a href="" class="link">Контакты</a></li>
+                    <li class="item"><a href="./index.html" class="link">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="" class="link">Контакты</a></li>
                 </ul>
-            <nav>
-                <ul class="contact list">
+                <nav class="contact">
+                    <ul class="contact list">
                         <li class="item"><a href="mailto:info@devstudio.com" lang="en" class="link">info@devstudio.com</a></li>
                         <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-                </ul>
-            </nav>
-        </div>
+                    </ul>
+                </nav>
+            </div>
         </header>
     <main>
         <!-- Герой -->
     <section class="hero">
-        <div class="conteiner">
+        <div class="container">
             <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
             <button type="button" class="button hero-button">Заказать услугу</button>
         </div>
     </section>
     <!--преимущества-->
     <section class="section benefits">
-        <div class="conteiner">
-            <h2 class="move-title">Преимущества</h2>
+        <div class="container">
+            <h2 class="visually-hidden">Преимущества</h2>
             <ul class="list benefits-list">
                 <li class="item">
                     <h3 class="title">Внимание к деталям</h3>
@@ -67,7 +67,7 @@
     </section>
     <!--чем мы занимаемся-->
     <section class="section specialization">
-        <div class="conteiner">
+        <div class="container">
             <h2 class="specialization-title">Чем мы занимаемся</h2>
             <ul class="list specialization-list">
                 <li class="item">
@@ -85,7 +85,7 @@
     </section>
     <!--Наша команда-->
     <section class="section team">
-        <div class="conteiner">
+        <div class="container">
             <h2 class="team-title">Наша команда</h2>
             <ul class="list team-list">
                 <li class="item">
@@ -114,8 +114,8 @@
     </main>
     <!--Футер-->
     <footer class="footer">
-        <div class="conteiner">
-            <a href="" lang="en" class="logo">Web<span class="white">Studio</span></a>
+        <div class="container">
+            <a href="" lang="en" class="footer-logo">Web<span class="white">Studio</span></a>
             <address class="footer-adress">
                 <ul class="list footer-list">
                     <li class="item"><a href="" class="map"> г. Киев, пр-т Леси Украинки, 26 </a></li>
