--- a/portfolio.html
+++ b/portfolio.html
@@ -14,17 +14,17 @@
     <body>
 <!-- Шапка сайта -->
     <header class="page-header">
-        <div class="conteiner">
-            <a href="" lang="en" class="logo">Web<span class="black">Studio</span></a>
-                <ul class="site-nav list">
-                        <li class="item"><a href="./index.html" class="link">Студия</a></li>
-                        <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
-                        <li class="item"><a href="" class="link">Контакты</a></li>
-                </ul>
-            <nav>
+        <div class="container header-nav">
+            <a href="" lang="en" class="header-logo">Web<span class="black">Studio</span></a>
+            <ul class="site-nav list">
+                <li class="item"><a href="./index.html" class="link">Студия</a></li>
+                <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li class="item"><a href="" class="link">Контакты</a></li>
+            </ul>
+            <nav class="contact">
                 <ul class="contact list">
-                        <li class="item"><a href="mailto:info@devstudio.com" lang="en" class="link">info@devstudio.com</a></li>
-                        <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                    <li class="item"><a href="mailto:info@devstudio.com" lang="en" class="link">info@devstudio.com</a></li>
+                    <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
                 </ul>
             </nav>
         </div>
@@ -32,8 +32,8 @@
     <main>
         <!--Портфолио-->
         <section class="section portfolio">
-            <div class="conteiner">
-                <h1 class="move-title">Наше портфолио</h1>
+            <div class="container">
+                <h1 class="visually-hidden">Наше портфолио</h1>
                 <ul class="list portfolio-nav">
                     <li><button type="button" class="button button-portfolio">Все</button></li>
                     <li><button type="button" class="button button-portfolio">Веб-сайты</button></li>
@@ -119,14 +119,14 @@
     </main>
     <!--Футер-->
     <footer class="footer">
-        <div class="conteiner">
-            <a href="" lang="en" class="logo">Web<span class="white">Studio</span></a>
+        <div class="container">
+            <a href="" lang="en" class="footer-logo">Web<span class="white">Studio</span></a>
             <address class="footer-adress">
-            <ul class="list footer-list">
-                <li class="item"><a href="" class="map"> г. Киев, пр-т Леси Украинки, 26 </a></li>
-                <li class="item"><a href="mailto:info@example.com" lang="en" class="nav">info@example.com</a></li>
-                <li class="item"><a href="tel:+380961111111" class="nav">+38 096 111 11 11</a></li>
-            </ul>
+                <ul class="list footer-list">
+                    <li class="item"><a href="" class="map"> г. Киев, пр-т Леси Украинки, 26 </a></li>
+                    <li class="item"><a href="mailto:info@example.com" lang="en" class="nav">info@example.com</a></li>
+                    <li class="item"><a href="tel:+380961111111" class="nav">+38 096 111 11 11</a></li>
+                </ul>
             </address>
         </div>
     </footer>
