--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- Шапка сайта -->
         <header class="page-header">
             <div class="container header-nav">
-                <a href="" lang="en" class="header-logo">Web<span class="black">Studio</span></a>
+                <a href="./index.html" lang="en" class="header-logo">Web<span class="black">Studio</span></a>
                 <ul class="site-nav list">
                     <li class="item"><a href="./index.html" class="link">Студия</a></li>
                     <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
@@ -71,14 +71,25 @@
             <h2 class="specialization-title">Чем мы занимаемся</h2>
             <ul class="list specialization-list">
                 <li class="item">
-                    <a href="" class="link"><img src="./images/main/hand-keyboard.jpg" alt="ноутбут в руке" 
-                    width="370"></a>
+                    <a href="" class="link">
+                        <img src="./images/main/hand-keyboard.jpg" 
+                        alt="ноутбут в руке" 
+                        width="370">
+                    </a>
                 </li>
                 <li class="item">
-                    <a href="" class="link"><img src="./images/main/hand-telephone.jpg" alt="телефон в руке" width="370"></a>
+                    <a href="" class="link">
+                        <img src="./images/main/hand-telephone.jpg" 
+                        alt="телефон в руке" 
+                        width="370">
+                    </a>
                 </li>
                 <li class="item">
-                    <a href="" class="link"><img src="./images/main/hand-tab.jpg" alt="планшет в руке" width="370"></a>
+                    <a href="" class="link">
+                        <img src="./images/main/hand-tab.jpg" 
+                        alt="планшет в руке" 
+                        width="370">
+                    </a>
                 </li>
             </ul>
         </div>
@@ -89,24 +100,40 @@
             <h2 class="team-title">Наша команда</h2>
             <ul class="list team-list">
                 <li class="item">
-                    <img src="./images/main/igor.jpg" alt="игорь" width="270"> 
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
+                    <img src="./images/main/igor.jpg" 
+                    alt="игорь" 
+                    width="270">
+                    <div class="team-border">
+                        <h3>Игорь Демьяненко</h3>
+                        <p lang="en">Product Designer</p>
+                    </div> 
                 </li>
                 <li class="item">
-                    <img src="./images/main/olga.jpg" alt="ольга" width="270">
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <img src="./images/main/olga.jpg" 
+                    alt="ольга" 
+                    width="270">
+                    <div class="team-border">
+                        <h3>Ольга Репина</h3>
+                        <p lang="en">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="item">
-                    <img src="./images/main/koly.jpg" alt="коля" width="270">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <img src="./images/main/koly.jpg" 
+                    alt="коля" 
+                    width="270">
+                    <div class="team-border">
+                        <h3>Николай Тарасов</h3>
+                        <p lang="en">Marketing</p>
+                    </div>
                 </li>
                 <li class="item">
-                    <img src="./images/main/misha.jpg" alt="миша" width="270">
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                    <img src="./images/main/misha.jpg" 
+                    alt="миша" 
+                    width="270">
+                    <div class="team-border">
+                        <h3>Михаил Ермаков</h3>
+                        <p lang="en">UI Designer</p>
+                    </div>
                 </li>
             </ul>
         </div>
