--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 <!-- Шапка сайта -->
     <header class="page-header">
         <div class="container header-nav">
-            <a href="" lang="en" class="header-logo">Web<span class="black">Studio</span></a>
+            <a href="./index.html" lang="en" class="header-logo">Web<span class="black">Studio</span></a>
             <ul class="site-nav list">
                 <li class="item"><a href="./index.html" class="link">Студия</a></li>
                 <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
@@ -35,82 +35,119 @@
             <div class="container">
                 <h1 class="visually-hidden">Наше портфолио</h1>
                 <ul class="list portfolio-nav">
-                    <li><button type="button" class="button button-portfolio">Все</button></li>
-                    <li><button type="button" class="button button-portfolio">Веб-сайты</button></li>
-                    <li><button type="button" class="button button-portfolio">Приложения</button></li>
-                    <li><button type="button" class="button button-portfolio">Дизайн</button></li>
-                    <li><button type="button" class="button button-portfolio">Маркетинг</button></li>
+                    <li class="item"><button type="button" class="button button-portfolio">Все</button></li>
+                    <li class="item"><button type="button" class="button button-portfolio">Веб-сайты</button></li>
+                    <li class="item"><button type="button" class="button button-portfolio">Приложения</button></li>
+                    <li class="item"><button type="button" class="button button-portfolio">Дизайн</button></li>
+                    <li class="item"><button type="button" class="button button-portfolio">Маркетинг</button></li>
                 </ul>
                 <ul class="list content-list">
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/portfolio/img-1.jpg" alt="ноутбук с веб-страницей" 
-                            width="370" height="294">
-                            <h3>Технокряк</h3>
-                            <p>Веб-сайт</p>
+                            <img src="./images/portfolio/img-1.jpg" 
+                            alt="ноутбук с веб-страницей" 
+                            width="370" 
+                            height="294">
+                            <div class="portfolio-border">
+                                <h3>Технокряк</h3>
+                                <p>Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/portfolio/img-2.jpg" alt="баскетболисты" 
-                            width="370" height="294">
-                            <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-                            <p>Дизайн</p>
+                            <img src="./images/portfolio/img-2.jpg" 
+                            alt="баскетболисты" 
+                            width="370" 
+                            height="294">
+                            <div class="portfolio-border">
+                                <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                                <p>Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/portfolio/img-3.jpg" alt="логотип ресторана" 
-                            width="370" height="294">
-                            <h3>Ресторан <span lang="en">Seafood</span></h3>
-                            <p>Приложение</p>
+                            <img src="./images/portfolio/img-3.jpg" 
+                            alt="логотип ресторана" 
+                            width="370" 
+                            height="294">
+                            <div class="portfolio-border">
+                                <h3>Ресторан <span lang="en">Seafood</span></h3>
+                                <p>Приложение</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/portfolio/img-4.jpg" alt="наушники" 
-                            width="370" height="294">
-                            <h3>Проект <span lang="en">Prime</span></h3>
-                            <p>Маркетинг</p>
+                            <img src="./images/portfolio/img-4.jpg" 
+                            alt="наушники" 
+                            width="370" 
+                            height="294">
+                            <div class="portfolio-border">
+                                <h3>Проект <span lang="en">Prime</span></h3>
+                                <p>Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/portfolio/img-5.jpg" alt="две коробки" 
-                            width="370" height="294">
-                            <h3>Проект <span lang="en">Boxes</span></h3>
-                            <p>Приложение</p>
+                            <img src="./images/portfolio/img-5.jpg" 
+                            alt="две коробки" 
+                            width="370" 
+                            height="294">
+                            <div class="portfolio-border">
+                                <h3>Проект <span lang="en">Boxes</span></h3>
+                                <p>Приложение</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/portfolio/img-6.jpg" alt="монитор" 
-                            width="370" height="294">
-                            <h3><span lang="en">Inspiration has no Borders</span></h3>
-                            <p>Веб-сайт</p>
+                            <img src="./images/portfolio/img-6.jpg" 
+                            alt="монитор" 
+                            width="370" 
+                            height="294">
+                            <div class="portfolio-border">
+                                <h3><span lang="en">Inspiration has no Borders</span></h3>
+                                <p>Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/portfolio/img-7.jpg" alt="развернутая книга" 
-                            width="370" height="294">
-                            <h3>Издание <span lang="en">Limited Edition</span></h3>
-                            <p>Дизайн</p>
+                            <img src="./images/portfolio/img-7.jpg" 
+                            alt="развернутая книга" 
+                            width="370" 
+                            height="294">
+                            <div class="portfolio-border">
+                                <h3>Издание <span lang="en">Limited Edition</span></h3>
+                                <p>Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/portfolio/img-8.jpg" alt="лейбл" 
-                            width="370" height="294">
-                            <h3>Проект <span lang="en">LAB</span></h3>
-                            <p>Маркетинг</p>
+                            <img src="./images/portfolio/img-8.jpg" 
+                            alt="лейбл" 
+                            width="370" 
+                            height="294">
+                            <div class="portfolio-border">
+                                <h3>Проект <span lang="en">LAB</span></h3>
+                                <p>Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/portfolio/img-9.jpg" alt="человек печатает на ноутбуке" width="370" height="294">
-                            <h3><span lang="en">Growing Business</span></h3>
-                            <p>Приложение</p>
+                            <img src="./images/portfolio/img-9.jpg" 
+                            alt="человек печатает на ноутбуке" 
+                            width="370" 
+                            height="294">
+                            <div class="portfolio-border">
+                                <h3><span lang="en">Growing Business</span></h3>
+                                <p>Приложение</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
